// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.api";
option java_outer_classname = "ApiProto";

package api;

// The greeting service definition.
service ToyShop {
  rpc GetToy(ToyId) returns (Toy) {}
  rpc CreateToy(Toy) returns (ToyId) {}
  rpc UpdateToy(Toy) returns (Empty) {}
  rpc DeleteToy(ToyId) returns (Empty) {}
}

message Empty {
}

message ToyId {
  int64 id = 1;
}

message Toy {
  int64 id = 1;
  string brand = 2;
  string model = 3;
  string category = 4;
  string description = 5;
  float price = 6;
  string imageurl = 7;
}